# desafio-backend

./: .env.example  .gitignore  00-COMECE_AQUI.md  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  GETTING_STARTED.md  INDEX.md  LICENSE  Makefile  POSTGRES_SETUP.md  PROJECT_STATUS.md  QUICK_REFERENCE.md  README.md  REQUIREMENTS_CHECKLIST.md  SUMMARY.md  TEST_RESULTS.md  alembic.ini  pyproject.toml  run_migrations.py  setup.sh
alembic/: env.py
app/: __init__.py  main.py
app/api/v1/routers/: __init__.py  abastecimentos.py  health.py  motoristas.py
app/core/: __init__.py  config.py  database.py  logging.py  security.py
app/domain/: __init__.py
app/domain/models/: __init__.py  abastecimento.py  enums.py  motorista.py
app/domain/schemas/: abastecimento.py  motorista.py
app/domain/validators/: __init__.py  cpf.py
app/repositories/: __init__.py  abastecimento_repository.py  base.py  motorista_repository.py
app/services/: abastecimento_service.py  anomaly_service.py
app/tests/: conftest.py  test_anomaly.py  test_cpf.py
docker/: docker-compose.yml
scripts/: load_data.py
