[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "v-lab-fuel-gateway"
version = "1.0.0"
description = "V-Lab Fuel Gateway API - Backend Challenge"
requires-python = ">=3.11"
authors = [
    {name = "V-Lab Team", email = "dev@vlab.com"}
]

dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "sqlalchemy==2.0.23",
    "asyncpg==0.29.0",
    "alembic==1.13.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "pydantic[email]==2.5.0",
    "python-dotenv==1.0.0",
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "httpx==0.25.2",
    "pytz==2023.3",
]

[project.optional-dependencies]
dev = [
    "ruff==0.1.8",
    "black==23.12.0",
    "isort==5.13.2",
    "mypy==1.7.1",
    "pre-commit==3.5.0",
]

[tool.setuptools]
packages = ["app"]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
py_version = 311

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["app/tests"]
asyncio_mode = "auto"
